# Rubics_Cube_Solver

./: CMakeLists.txt  inspiration.txt  main.cpp
Model/: GenericRubicsCube.cpp  GenericRubicsCube.h  RubicsCube1dArray.cpp  RubicsCube3dArray.cpp  RubicsCubeBitBoard.cpp
Model/PatternDatabase/: PatternDatabase.h
PatternDatabases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
Solver/: BFSSolver.h  DFSSolver.h  IDASTARSolver.h  IDDFSSolver.h
